--- a/valmodule-isik3-terminplanung/src/main/resources/plugin/patches/de.gematik.isik-terminplanung-3.0.9/changes.txt
+++ b/valmodule-isik3-terminplanung/src/main/resources/plugin/patches/de.gematik.isik-terminplanung-3.0.9/changes.txt
@@ -1,2 +1,3 @@
+de.gematik.isik-terminplanung-3.0.9:
 - in StructureDefinition-ISiKKalender.json order von Schedule.extension:KalenderName an vierter Stelle
   - muss eigentlich an zweite Stelle
